Added Enumeration Dropdown to recipe difficulty